--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,14 +1,14 @@
 solr_assocs:
-  url: "https://solr.monarchinitiative.org/solr/golr"
+  url: "http://browser.planteome.org/solr"
   timeout: 5
 amigo_solr_assocs:
-  url: "http://golr.berkeleybop.org"
-  timeout: 4
+  url: "http://browser.planteome.org/solr"
+  timeout: 8
 solr_search:
-  url: "https://solr.monarchinitiative.org/solr/search"
+  url: "http://browser.planteome.org/solr"
   timeout: 2
 amigo_solr_search:
-  url: "http://golr.berkeleybop.org"
+  url: "http://browser.planteome.org/solr"
   timeout: 2
 sparql:
   url: "http://sparql.hegroup.org/sparql"
@@ -19,10 +19,15 @@ scigraph_ontology:
 scigraph_data:
   url: "https://scigraph-ontology.monarchinitiative.org/scigraph/"
   timeout: 2
-use_amigo_for:
-  - function
+categories:
+  - id: anatomy
+    superclass: PO:0025131
+  - id: phenotype
+    superclass: TO:0000387
+  - id: environment
+    superclass: TO:0000387
+default_solr_schema: amigo
 ontologies:
   - id: magic1234
     handle: pato
     pre_load: true
-
